@@ -1,5 +1,5 @@
 GNU SASL THANKS -- Acknowledgements.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
 GNU SASL uses libntlm by Grant Edwards maintained by Simon Josefsson;
@@ -30,6 +30,7 @@ James Mansion
 Maxim Britov
 Brad Hards
 James Canete
+Daniel Armyr
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
